Add :jvm-opts ["--enable-native-access=ALL-UNNAMED"]